alignment issue in mobile view for opportunities module

--- a/src/app/leads/manage-leads/manage-leads.component.css
+++ b/src/app/leads/manage-leads/manage-leads.component.css
@@ -45,9 +45,11 @@
 }
 @media (max-width:320px){
     .mr-pd{
-        margin-left: -16px;
-        padding-top: 8px;
-        padding-right: 13px;
+        margin-left: 95px;
+        margin-top: -36px;
+    }
+    .mt10{
+        margin-top: -10px !important;
     }
 }
 .mr0{
@@ -60,7 +62,8 @@
 }
 @media (max-width:425px){
     .r5{
-        right: -13px !important;
+        right: -3px !important;
+        padding-top: 2px;
     }
     .pr-pl{
         padding-right: 0px !important;
@@ -88,16 +91,28 @@
         margin-top: 7px !important;
     }
     .r20{
-        right: -20px !important;
+        right: -10px !important;
+        padding-top: 9px !important;
     }
-    .pb{
+    /* .pb{
         padding-bottom: 105px !important;
-    }
+    } */
     .width{
         width: 103%;
     }
-    .pb{
+    /* .pb{
         padding-bottom: 110px;
+    } */
+    .top{
+        top: 10px !important;
+    }
+    .top2{
+        top: 2px !important;
+    }
+    .ml0-mr0{
+        margin-left: 0px;
+        margin-right: 0px;
+        padding-left: 20px !important;
     }
 }
 .margin-left-right{
@@ -106,3 +121,53 @@
 .button{
     padding: 6px 14px;
 }
+@media (max-width:768px){
+.form-group-mr{
+    margin-left: 0px;
+}
+}
+@media only screen and (max-width:479px){
+    .form-group-mr{
+        margin-left: -15px !important;
+    }
+    .ml0-mr0{
+        margin-left: 0px;
+        margin-right: 0px;
+        padding-left: 20px !important;
+    }
+}
+@media only screen and (max-width:599px){
+    .form-group-mr{
+        margin-left: -15px !important;
+    }
+    .ml0-mr0{
+        margin-left: 0px;
+        margin-right: 0px;
+        padding-left: 20px !important;
+    }
+    .select-width{
+        width:100% !important
+    }
+}
+.select-width{
+    width:  196px;
+    height: 32px;
+}
+/* .alignment{
+    margin-top: 0px !important;margin-left: 0 !important;
+    margin-right: 0 !important;padding-left: 7px;padding-right: 8px;
+}
+.align{
+    margin-top: 0px !important;
+    margin-left: 0 !important;margin-right: 0 !important;padding-left: 19px;padding-right: 19px;
+} */
+@media only screen and (max-width:479px){
+    .pr{
+    padding-right:34px !important;
+    }
+}
+/* @media only screen and (max-width:320px){
+    .mt60{
+        margin-top: 64px !important;
+    }
+} */
